--- a/main.html
+++ b/main.html
@@ -8,15 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="btn" style="background-color: black; color: white; border-radius: 5px; border: none;">Submit</button>
-
-<style>
-  #btn:hover {
-    background-color: yellow;
-    color: black;
-    border-radius: 30px;
-  }
-</style>
+	<button id="btn">Submit</button>
 
     <script type="text/javascript" src="./script.js">
 </script>
